--- a/md/基础知识/01/01.html
+++ b/md/基础知识/01/01.html
@@ -136,8 +136,122 @@
             <div class="search-plus" id="book-search-results">
                 <div class="search-noresults">
                     <section class="normal markdown-section">
-                        
-                        
+                        <div id='anchor-navigation-ex-navbar'><i class='fa fa-anchor'></i><ul><li><span class='title-icon fa fa-hand-o-right'></span><a aria-label class='on-toolbar-action' href='' onclick="$('.fa.fa-align-justify').parent()[0].click();">目录</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_1'><b></b>第一节 概述</a></li><ul><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_2'><b>1. </b>健康管理的概念 ✳</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_3'><b>2. </b>健康管理的目标与特点 ✳</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_4'><b>3. </b>健康管理的理论与实践溯源</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_5'><b>4. </b>健康管理的科学基础</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_6'><b>5. </b>健康管理的基本步骤✳</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_7'><b>6. </b>健康管理的服务流程✳</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_8'><b>7. </b>提供健康管理服务的机构</a></li></ul></ul></div><a href='#anchor_1' id='anchorNavigationExGoTop'><i class='fa fa-arrow-up'></i></a>
+                        <h1 id="anchor_1"><a class="anchor-navigation-ex-anchor" href="#anchor_1" name="anchor_1"><i aria-hidden="true" class="fa fa-link"></i></a>第一节 概述</h1>
+<h2 id="anchor_2"><a class="anchor-navigation-ex-anchor" href="#anchor_2" name="anchor_2"><i aria-hidden="true" class="fa fa-link"></i></a>1. 健康管理的概念 ✳</h2>
+<p>健康管理的发展与社会文明进步息息相关。</p>
+<p>健康管理在 <code class="language-vim">20 世纪 80 年代从美国兴起</code>，随后英 国、德国、z 法国和日本等发达国家积极效仿和实施健康管理。</p>
+<p><code class="language-vim">进入 21 世纪后，健康管理开始在我国逐步兴起与发展。</code></p>
+<ul>
+<li>健康管理含义视角：
+<ul>
+<li>从公共卫生角度认为：健康管理是找出健康的危险因素，进行连续监测和有效控制；</li>
+<li>从预防保健角度认为：健康管理是通过体检早期发现疾病，并做到早诊断及早治疗；</li>
+<li>从健康体检角度认为：健康管理是健康体检的延伸与扩展，健康体检加检后服务等于健康管理；</li>
+<li>从疾病管理角度认为：健康管理是更加积极主动地筛查与诊治疾病；</li>
+</ul>
+</li>
+</ul>
+<p>健康管理是以<code class="language-vim">现代健康概念</code>（生理、心理和社 会适应能力）和新的医学模式（生理 - 心理 - 社会）以及<code class="language-vim">中医治未病</code>为指导，通过采用<code class="language-vim">现代医学和现代管理学</code>的理论、技术、方法和手段，对<code class="language-vim">个体和群体</code>整体健康状况及其<code class="language-vim">影响健康的危险因素</code>进行全面<code class="language-vim">检 测、评估、有效干预与连续跟踪服务</code>的医学行为及过程。</p>
+<p>健康管理的宗旨：<code class="language-vim">有效地利用有限的资源来达到最大的健康效果</code>；</p>
+<p>主体：经过系统医学教育或培训并取得相应资质的医务工作者，客体是<code class="language-vim">健康人群、亚健康人群以及慢性非传染性疾病早期或康复期人群</code>。</p>
+<p>公众理念：<code class="language-vim">病前主动防，病后科学管，跟踪服务不间断</code>。</p>
+<p>任务：<code class="language-vim">防大病、管慢病、促健康</code>。</p>
+<h2 id="anchor_3"><a class="anchor-navigation-ex-anchor" href="#anchor_3" name="anchor_3"><i aria-hidden="true" class="fa fa-link"></i></a>2. 健康管理的目标与特点 ✳</h2>
+<ul>
+<li>
+<p>健康管理的目标包括：</p>
+<ol>
+<li>完善健康和福利。</li>
+<li>减少健康危险因素。</li>
+<li>预防疾病高危人群患病。</li>
+<li>易化疾病的早期诊断。</li>
+<li>增加临床效用、效率。</li>
+<li>避免可预防的疾病相关并发症的发生。</li>
+<li>消除或减少无效或不必要的医疗服务。</li>
+<li>对疾病结局作出度量并提供持续的评估和改进。</li>
+</ol>
+</li>
+<li>
+<p>健康的概念：</p>
+<ul>
+<li><code class="language-vim">1948 年</code>，世界卫生组织 (WHO) 宪章中首次提出三维的健康概念：“健康不仅仅是没有疾病和虚弱，而是一种身体、心理和社会的完好状态”。</li>
+<li><code class="language-vim">1984 年</code>，在《保健大宪章》中进一步将健康概念表述为：“健康不仅仅是没有疾病和虚弱，而是包括身体、心理和社会适应能力的完好状态”。</li>
+<li><code class="language-vim">1989 年</code>，WHO 完善了健康概念，指出健康应是<code class="language-vim">生理、心理、社会适应和道德方面的良好状态</code>。</li>
+</ul>
+</li>
+</ul>
+<p>健康管理的特点是<code class="language-vim">标准化、量化、个体化和系统化</code>。</p>
+<p>健康管理的具体服务内容和工作流程必须依据<code class="language-vim">循证医学和循证公共卫生的标准</code>和学术界已经公认的预防和控制指南及规范。</p>
+<h2 id="anchor_4"><a class="anchor-navigation-ex-anchor" href="#anchor_4" name="anchor_4"><i aria-hidden="true" class="fa fa-link"></i></a>3. 健康管理的理论与实践溯源</h2>
+<p><code class="language-vim">治未病思想</code>源自距今已有两千余年历史的中医学典籍《黄帝内经》。</p>
+<p>《素问 · 四气调神大论篇》指出：“圣人不治已病治未病，不治已乱治未乱，此之谓也。夫病已成而后药之，乱已成而后治之，譬如渴而穿井，斗而铸锥，不亦晚乎？”</p>
+<p>《黄帝内经》中讲，<code class="language-vim">上医治未病，中医治欲病，下医治已病</code>。</p>
+<h2 id="anchor_5"><a class="anchor-navigation-ex-anchor" href="#anchor_5" name="anchor_5"><i aria-hidden="true" class="fa fa-link"></i></a>4. 健康管理的科学基础</h2>
+<p>健康管理是要对危险因素进行早期发现、早期评估和早期干预，以实现维护健康的目的。</p>
+<h2 id="anchor_6"><a class="anchor-navigation-ex-anchor" href="#anchor_6" name="anchor_6"><i aria-hidden="true" class="fa fa-link"></i></a>5. 健康管理的基本步骤✳</h2>
+<ol>
+<li>
+<p>了解和掌握健康，开展健康信息收集和健康检查。</p>
+<p>个人健康信息包括<code class="language-vim">个人一般情况</code>（性别、年龄等）、<code class="language-vim">目前健康状况和疾病家族史</code>、<code class="language-vim">生活方式</code>（膳食、身体活动、吸烟、饮酒等）、<code class="language-vim">体格检查</code>（身高、体重、血压等）和<code class="language-vim">血</code>、<code class="language-vim">尿实验室检查</code>（血脂、血糖等）。</p>
+</li>
+<li>
+<p>关心和评价健康，开展健康风险评价和健康评估。</p>
+<p>根据所收集的健康信息，对个人的健康状况及未来患病或死亡的危险性用<code class="language-vim">数学模型</code>进行<code class="language-vim">量化</code>评估。</p>
+<p>目的是帮助个体综合认识健康风险，鼓励和帮助人们纠正不健康的行为和习惯，制订<code class="language-vim">个性化</code>的健康干预措施并对其效果进行评估。</p>
+</li>
+<li>
+<p>干预和促进健康，开展健康风险干预和健康促进。</p>
+<p>以多种形式来帮助个人采取行动、纠正不良的生活方式和习惯，控制健康危险因素，实现个人健康管理计划的目标。</p>
+<p>与一般<code class="language-vim">健康教育</code>和<code class="language-vim">健康促进</code>不同，健康管理中的健康干预是<code class="language-vim">个性化</code>的，根据个体的健康危险因素，进行个体指导，设定个体目标，并动态追踪效果。</p>
+</li>
+</ol>
+<h2 id="anchor_7"><a class="anchor-navigation-ex-anchor" href="#anchor_7" name="anchor_7"><i aria-hidden="true" class="fa fa-link"></i></a>6. 健康管理的服务流程✳</h2>
+<ol>
+<li>
+<p>健康调查与健康体检</p>
+</li>
+<li>
+<p>健康评估</p>
+</li>
+<li>
+<p>个人健康咨询</p>
+<ul>
+<li>解释个体健康信息及健康评估结果及其对健康的影响；</li>
+<li>制定个体健康管理计划；</li>
+<li>提供健康指导；</li>
+<li>制定随访跟踪计划。</li>
+</ul>
+</li>
+<li>
+<p>个人健康管理后续服务</p>
+<ul>
+<li>建立健康信息资源平台，网上查询和接受指导；</li>
+<li>针对个体的健康改善行动计划；</li>
+<li>健康教育和健康促进的实施。</li>
+</ul>
+</li>
+<li>
+<p>专项的健康及疾病管理服务</p>
+<p>针对特定疾病或疾病的危险因素进行的管理服务，如心血管疾病及相关危险因素管理、精神压力缓解、戒烟、运动、营养及膳食咨询等。</p>
+</li>
+</ol>
+<div class="mermaid">graph TD;
+  A[确定健康管理目标人群]--&gt;B[收集个人健康信息与建立健康档案];
+  B--整理利用健康信息--&gt;C[进行健康风险评估与人群管理分类];
+  C--确定重点目标人群或重点干预项目--&gt;D[制定健康干预处方及群体健康干预计划];
+  D--跟踪指导健康关于过程--&gt;E[实施个体与群体健康干预];
+  E--连续收集健康信息--&gt;B
+</div>
+<h2 id="anchor_8"><a class="anchor-navigation-ex-anchor" href="#anchor_8" name="anchor_8"><i aria-hidden="true" class="fa fa-link"></i></a>7. 提供健康管理服务的机构</h2>
+<ul>
+<li>医院、健康服务机构、社区及工作场；</li>
+<li>政府通过政策立法影响人们的消费行为及健康风险控制的策略；</li>
+<li>商业服务机构，如体检中心、医院及保险机构提高个人参与的积极性；</li>
+<li>企业及集体单位会通过自主或服务外包的方式来开展健康管理；</li>
+<li>健康保险公司及一些医疗保健机构。</li>
+</ul>
+
                         <footer class="page-footer"><span class="copyright">© 2020 刘士. 
 All rights reserved.</span><span class="footer-modification">
 <span id="busuanzi_container_site_uv" style="display:none">本站访客数 <span id="busuanzi_value_site_uv">
@@ -196,7 +310,7 @@ All rights reserved.</span><span class="footer-modification">
                 "next_page_link": "02.html"
             },
             "basePath": "../../..",
-            "js": {}
+            "js": {'mermaid': ['../../../../asserts/lsbook/mermaid/mermaid.min.js'], 'prism': ['../../../../asserts/lsbook/prismjs/clipboard.min.js', '../../../../asserts/lsbook/prismjs/prism.js']}
         });
     });
 </script>
