--- a/md/基础知识/01/02.html
+++ b/md/基础知识/01/02.html
@@ -136,8 +136,124 @@
             <div class="search-plus" id="book-search-results">
                 <div class="search-noresults">
                     <section class="normal markdown-section">
-                        
-                        
+                        <div id='anchor-navigation-ex-navbar'><i class='fa fa-anchor'></i><ul><li><span class='title-icon fa fa-hand-o-right'></span><a aria-label class='on-toolbar-action' href='' onclick="$('.fa.fa-align-justify').parent()[0].click();">目录</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_1'><b></b>第二节 健康管理的基本策略</a></li><ul><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_2'><b>1. </b>生活方式管理</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_3'><b>2. </b>需求管理</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_4'><b>3. </b>疾病管理</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_5'><b>4. </b>灾难性病伤管理</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_6'><b>5. </b>残疾管理</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_7'><b>6. </b>综合的人群健康管理</a></li></ul></ul></div><a href='#anchor_1' id='anchorNavigationExGoTop'><i class='fa fa-arrow-up'></i></a>
+                        <h1 id="anchor_1"><a class="anchor-navigation-ex-anchor" href="#anchor_1" name="anchor_1"><i aria-hidden="true" class="fa fa-link"></i></a>第二节 健康管理的基本策略</h1>
+<p>健康管理的<code class="language-vim">基本策略</code>是通过健康评估和控制健康风险，达到维护健康的目的。</p>
+<p>健康信息收集、健康风险评估和健康危险干预三部分中前两者旨在提供有<code class="language-vim">针对性的个性化健康信息</code>来调动个体降低本身健康风险的积极性，而健康危险干预则是根据循证医学的研究结果指导个体维护自己的健康，降低已经存在的健康风险。</p>
+<ul>
+<li>常见慢性病及其共同危险因素之间的内在关系</li>
+</ul>
+<p><a data-lightbox="1" href="../../../screenshot/2020-02-15-19-02-36.png"><img src="../../../screenshot/2020-02-15-19-02-36.png" alt="常见慢性病及其共同危险因素之间的内在关系" title="常见慢性病及其共同危险因素之间的内在关系" /></a></p>
+<ul>
+<li>健康管理的基本策略：
+<ul>
+<li>生活方式管理</li>
+<li>需求管理</li>
+<li>疾病管理</li>
+<li>灾难性病伤管理</li>
+<li>残疾管理</li>
+<li>综合的人群健康管理</li>
+</ul>
+</li>
+</ul>
+<h2 id="anchor_2"><a class="anchor-navigation-ex-anchor" href="#anchor_2" name="anchor_2"><i aria-hidden="true" class="fa fa-link"></i></a>1. 生活方式管理</h2>
+<ol>
+<li>
+<p>生活方式管理的概念</p>
+<p>以个人或自我为核心的卫生保健活动。</p>
+<p><code class="language-vim">膳食</code>、<code class="language-vim">体力活动</code>、<code class="language-vim">吸烟</code>、<code class="language-vim">饮酒</code>、<code class="language-vim">精神压力</code>是对国人进行生活管理的重点。</p>
+</li>
+<li>
+<p>生活方式管理的特点 ✳</p>
+<ol>
+<li>以个人为中心，强调个体的健康责任和作用</li>
+<li>以预防为主，有效整合三级预防，尤其是重视一级预防，控制健康危险因素。</li>
+</ol>
+<p>预防是生活方式管理的核心</p>
+</li>
+<li>
+<p>健康行为改变的技术 ✳</p>
+<ul>
+<li>教育：传递知识、确立态度、改变行为；</li>
+<li>激励：正面强化，反面强化，反馈促进，惩罚等措施进行行为矫正；</li>
+<li>训练：参与计划训练与体验，培训个体掌握行为矫正技术；</li>
+<li>营销：利用营销技术，营造健康大环境。</li>
+</ul>
+</li>
+</ol>
+<h2 id="anchor_3"><a class="anchor-navigation-ex-anchor" href="#anchor_3" name="anchor_3"><i aria-hidden="true" class="fa fa-link"></i></a>2. 需求管理</h2>
+<ol>
+<li>
+<p>需求管理的概念</p>
+<p>通过帮助<code class="language-vim">健康消费者</code>维<code class="language-vim">护自身健康和寻求恰当的卫生服务</code>，控制卫生成本，促进卫生服务的合理利用。</p>
+<p>需求管理的目标是<code class="language-vim">减少昂贵的、临床并非必需的医疗服务，同时改善人群的健康状况</code>。</p>
+<p>需求管理常用的手段：<code class="language-vim">寻找手术的替代疗法、帮助病人减少特定的危险因素并采纳健康的生活方式、鼓励自我保健和干预等</code>。 ✳</p>
+</li>
+<li>
+<p>影响需求的主要因素 ✳</p>
+<ul>
+<li>患病率</li>
+<li>感知到的需要</li>
+<li>患者偏好</li>
+<li>健康因素以外的动机</li>
+</ul>
+<p>感知到的需要包括：个人关于疾病危险和卫生服务益处的知识、个人感知到的推荐疗法的疗效、个人评估疾病问题的能力、个人感知到的疾病的严重性、个人独立处理疾病问题的能力、以及个人对自己处理好疾病问题的信心等。</p>
+</li>
+<li>
+<p>需求管理的主要工具与实施策略 ✳</p>
+<p>常见的方法有：<code class="language-vim">24 小时电话就诊分流服务</code>、<code class="language-vim">转诊服务</code>、<code class="language-vim">基于互联网的卫生信息数据库</code>、<code class="language-vim">健康课堂</code>、<code class="language-vim">服务预约</code>等。</p>
+<p>有的时候，需求管理还会以<code class="language-vim">守门人</code>的形象出现在疾病管理项目中。</p>
+</li>
+</ol>
+<h2 id="anchor_4"><a class="anchor-navigation-ex-anchor" href="#anchor_4" name="anchor_4"><i aria-hidden="true" class="fa fa-link"></i></a>3. 疾病管理</h2>
+<p>疾病管理是<code class="language-vim">一个协调医疗保健干预和与病人沟通的系统</code>，它强调病人自我保健的重要性。</p>
+<p>疾病管理包含：人群识别、循证医学指导、医 生与服务提供者协调工作、病人自我管理教育、过 程与结果的预测和管理、定期报告和反馈。</p>
+<p>疾病管理的主要特点： ✳</p>
+<ol>
+<li>目标人群是还有特定疾病的患者</li>
+<li>关注个体或群体连续健康状况与生活质量</li>
+<li>医疗卫生服务及干预措施的综合协调</li>
+</ol>
+<h2 id="anchor_5"><a class="anchor-navigation-ex-anchor" href="#anchor_5" name="anchor_5"><i aria-hidden="true" class="fa fa-link"></i></a>4. 灾难性病伤管理</h2>
+<p>灾难性病伤管理是疾病管理的一个特殊类型，灾难性指对健康的危害十分严重，也可指其造成的医疗卫生花费巨大，常见于<code class="language-vim">肿瘤</code>、<code class="language-vim">肾衰竭</code>、<code class="language-vim">严重外伤</code>等情形。</p>
+<p>优秀的灾难性病伤管理项目的特征：</p>
+<ol>
+<li>转诊及时；</li>
+<li>综合考虑各方面因素，制订适宜的医疗服务计划；</li>
+<li>具备一支包含多种医学专科及综合业务能力的服务队伍，能够有效应对可能出现的多种医疗服务需要；</li>
+<li>最大程度地帮助病人进行目我管理；</li>
+<li>尽可能使患者及其家人满意。</li>
+</ol>
+<h2 id="anchor_6"><a class="anchor-navigation-ex-anchor" href="#anchor_6" name="anchor_6"><i aria-hidden="true" class="fa fa-link"></i></a>5. 残疾管理</h2>
+<ol>
+<li>
+<p>残疾管理的目的</p>
+<p>减少工作地点发生残疾事故的频率和费用代价。</p>
+</li>
+<li>
+<p>造成残疾的原因</p>
+<ul>
+<li>医学因素：药物、手术、治疗过程的失误和不可预测的因素。</li>
+<li>非医学因素：职业因素、社会压力、心理障碍等。</li>
+</ul>
+</li>
+<li>
+<p>残疾管理的具体目标</p>
+<ol>
+<li>防止残疾恶化</li>
+<li>注重功能性能力恢复</li>
+<li>设定实际康复和返工的期望值</li>
+<li>详细说明限制事项和可行事项</li>
+<li>评估医学和社会心理学因素</li>
+<li>与患者和雇主进行有效沟通</li>
+<li>在需要时要考虑复职情况</li>
+<li>要实行循环管理</li>
+</ol>
+</li>
+</ol>
+<h2 id="anchor_7"><a class="anchor-navigation-ex-anchor" href="#anchor_7" name="anchor_7"><i aria-hidden="true" class="fa fa-link"></i></a>6. 综合的人群健康管理</h2>
+<p>综合的人群健康管理<code class="language-vim">通过协调上述不同的健康管理策略</code>来对个体提供更为全面的健康管理。</p>
+
                         <footer class="page-footer"><span class="copyright">© 2020 刘士. 
 All rights reserved.</span><span class="footer-modification">
 <span id="busuanzi_container_site_uv" style="display:none">本站访客数 <span id="busuanzi_value_site_uv">
@@ -196,7 +312,7 @@ All rights reserved.</span><span class="footer-modification">
                 "next_page_link": "03.html"
             },
             "basePath": "../../..",
-            "js": {}
+            "js": {'prism': ['../../../../asserts/lsbook/prismjs/clipboard.min.js', '../../../../asserts/lsbook/prismjs/prism.js']}
         });
     });
 </script>
