--- a/md/基础知识/01/03.html
+++ b/md/基础知识/01/03.html
@@ -136,8 +136,86 @@
             <div class="search-plus" id="book-search-results">
                 <div class="search-noresults">
                     <section class="normal markdown-section">
-                        
-                        
+                        <div id='anchor-navigation-ex-navbar'><i class='fa fa-anchor'></i><ul><li><span class='title-icon fa fa-hand-o-right'></span><a aria-label class='on-toolbar-action' href='' onclick="$('.fa.fa-align-justify').parent()[0].click();">目录</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_1'><b></b>第三节 健康管理的发展趋势</a></li><ul><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_2'><b>1. </b>健康管理的国际发展趋势</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_3'><b>2. </b>健康管理在中国的需求现状</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_4'><b>3. </b>健康管理与健康中国建设</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_5'><b>4. </b>健康管理的学科发展</a></li></ul></ul></div><a href='#anchor_1' id='anchorNavigationExGoTop'><i class='fa fa-arrow-up'></i></a>
+                        <h1 id="anchor_1"><a class="anchor-navigation-ex-anchor" href="#anchor_1" name="anchor_1"><i aria-hidden="true" class="fa fa-link"></i></a>第三节 健康管理的发展趋势</h1>
+<h2 id="anchor_2"><a class="anchor-navigation-ex-anchor" href="#anchor_2" name="anchor_2"><i aria-hidden="true" class="fa fa-link"></i></a>1. 健康管理的国际发展趋势</h2>
+<p>20 世纪 70 年代末，健康美国人的全民健康行动开始开展，该行动有三大目标：<code class="language-vim">预防疾病</code>、<code class="language-vim">拯救生命</code>；<code class="language-vim">提高人民生活质量</code>；<code class="language-vim">坚持健康促进与疾病预防用以节约开支</code>。✳</p>
+<p><code class="language-vim">日本</code>是亚洲地区开展健康管理较早的国家。</p>
+<h2 id="anchor_3"><a class="anchor-navigation-ex-anchor" href="#anchor_3" name="anchor_3"><i aria-hidden="true" class="fa fa-link"></i></a>2. 健康管理在中国的需求现状</h2>
+<ol>
+<li>
+<p><code class="language-vim">慢性病</code>成为威胁我国居民健康的主要因素</p>
+<ol>
+<li>
+<p>疾病谱、死亡谱的改变导致慢性病患病率显著攀升</p>
+</li>
+<li>
+<p>慢性病相关危险因素流行日益严重</p>
+<ol>
+<li>我国人群超重和肥胖患病率快速上升</li>
+<li><code class="language-vim">膳食不合理</code>、<code class="language-vim">身体活动不足</code>及<code class="language-vim">吸烟</code>是造成多种慢性病的三大行为危险因素</li>
+</ol>
+</li>
+</ol>
+</li>
+<li>
+<p>老龄化趋势日趋严重</p>
+<ol>
+<li>老年人数量迅速增长</li>
+<li>我国社会养老服务体系建设处于起步阶段</li>
+</ol>
+</li>
+</ol>
+<h2 id="anchor_4"><a class="anchor-navigation-ex-anchor" href="#anchor_4" name="anchor_4"><i aria-hidden="true" class="fa fa-link"></i></a>3. 健康管理与健康中国建设</h2>
+<ol>
+<li>
+<p>《“健康中国 2030”规划纲要》</p>
+<p>中共中央政治局 2016 年 8 月 26 日召开会议，习近平主持会议并审议通过了<code class="language-vim">《“健康中国 2030”规划纲要》</code>。</p>
+<ol>
+<li>强调预防为主，防患未然</li>
+<li>坚持共建共享，全民参与</li>
+<li>全民健康是建设健康中国的根本目的</li>
+</ol>
+</li>
+<li>
+<p>中国防治慢性病中长期规划 (2017-2025 年）</p>
+<ol>
+<li>突出慢性病防治王作的综合性和社会性</li>
+<li>强调慢性病防控的个人健康责任</li>
+<li>行动计划与预期目标明确可操作</li>
+</ol>
+</li>
+</ol>
+<h2 id="anchor_5"><a class="anchor-navigation-ex-anchor" href="#anchor_5" name="anchor_5"><i aria-hidden="true" class="fa fa-link"></i></a>4. 健康管理的学科发展</h2>
+<ol>
+<li>中华医学会健康管理学分会 (2007 年成立）</li>
+<li>健康管理师职业培训</li>
+<li>高等院校健康管理人才培养和科学研究</li>
+<li>科学研究方向
+<ol>
+<li>健康管理服务体系研究</li>
+<li>健康管理应用基础研究</li>
+<li>健康管理智能系统研究</li>
+</ol>
+</li>
+</ol>
+<p>健康管理师是 <code class="language-vim">2005 年 10 月</code>劳动和社会保障部第四批正式发布的 11 个新职业之一。</p>
+<p><code class="language-vim">2017 年</code>，健康管理师正式编入新版国家人社部职业资格目录清单。</p>
+<p>健康管理师是<code class="language-vim">从事对人群或个人健康和疾病的监测、分析、评估以及健康维护和健康促进的专业人员</code>。</p>
+<ul>
+<li>工作内容：
+<ul>
+<li>采集和管理个人或群体的健康信息；</li>
+<li>评估个人或群体的健康和疾病危险性；</li>
+<li>进行个人或群体的健康咨询与指导；</li>
+<li>制订个人或群体的健康促进计划：</li>
+<li>对个人或群体进行健康教育和推广；</li>
+<li>进行健康管理相关技术的研究与开发；</li>
+<li>进行健康管理技术应用的成效评估等。</li>
+</ul>
+</li>
+</ul>
+
                         <footer class="page-footer"><span class="copyright">© 2020 刘士. 
 All rights reserved.</span><span class="footer-modification">
 <span id="busuanzi_container_site_uv" style="display:none">本站访客数 <span id="busuanzi_value_site_uv">
@@ -196,7 +274,7 @@ All rights reserved.</span><span class="footer-modification">
                 "next_page_link": "04.html"
             },
             "basePath": "../../..",
-            "js": {}
+            "js": {'prism': ['../../../../asserts/lsbook/prismjs/clipboard.min.js', '../../../../asserts/lsbook/prismjs/prism.js']}
         });
     });
 </script>
