--- a/md/基础知识/01/04.html
+++ b/md/基础知识/01/04.html
@@ -136,8 +136,89 @@
             <div class="search-plus" id="book-search-results">
                 <div class="search-noresults">
                     <section class="normal markdown-section">
-                        
-                        
+                        <div id='anchor-navigation-ex-navbar'><i class='fa fa-anchor'></i><ul><li><span class='title-icon fa fa-hand-o-right'></span><a aria-label class='on-toolbar-action' href='' onclick="$('.fa.fa-align-justify').parent()[0].click();">目录</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_1'><b></b>第四节 基本卫生保健</a></li><ul><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_2'><b>1. </b>基本卫生保健的概念</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_3'><b>2. </b>基本卫生保健的原则 ✳</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_4'><b>3. </b>基本卫生保健的内容</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_5'><b>4. </b>基本卫生保健的特点 ✳</a></li><li><span class='title-icon fa fa-hand-o-right'></span><a href='#anchor_6'><b>5. </b>基本卫生保健的意义</a></li></ul></ul></div><a href='#anchor_1' id='anchorNavigationExGoTop'><i class='fa fa-arrow-up'></i></a>
+                        <h1 id="anchor_1"><a class="anchor-navigation-ex-anchor" href="#anchor_1" name="anchor_1"><i aria-hidden="true" class="fa fa-link"></i></a>第四节 基本卫生保健</h1>
+<h2 id="anchor_2"><a class="anchor-navigation-ex-anchor" href="#anchor_2" name="anchor_2"><i aria-hidden="true" class="fa fa-link"></i></a>1. 基本卫生保健的概念</h2>
+<p>1978 年 WHO 在<code class="language-vim">阿拉木图</code>召开的首次国际初级卫生保健会议对基本卫生保健（初级卫生保健）下定义：</p>
+<p>基本卫生保健 (Primary Health Care, PHC) 是指<code class="language-vim">最基本的、人人都能得到的、体现社会平等权利的、人民群众和政府都能负担得起和全社会积极参与的卫生保健服务</code>。 ✳</p>
+<ul>
+<li>从居民角度，基本卫生保健必不可少，人人享有和参与，且费用能由国家和人民负担得起的卫生保健。</li>
+<li>从技术方面，基本卫生保健是切实可行、学术上可靠、为社会和社区的个人、家庭所乐于接受。</li>
+<li>从卫生系统角度，基本卫生保健为全体居民提供最基本的卫生保健服务，是最基层的卫生保健组织，是卫生系统的核心部分。</li>
+<li>从政府部门角度，是各级政府的职责，是各级政府全心全意为人民服务、关心人民健康的重要体现。</li>
+<li>从社会经济看，基本卫生保健是社会经济发展的重要组成部分，是精神文明建设的重要内容。</li>
+</ul>
+<h2 id="anchor_3"><a class="anchor-navigation-ex-anchor" href="#anchor_3" name="anchor_3"><i aria-hidden="true" class="fa fa-link"></i></a>2. 基本卫生保健的原则 ✳</h2>
+<ol>
+<li>合理布局</li>
+<li>社区参与</li>
+<li>预防为主</li>
+<li>适宜技术</li>
+<li>综合利用</li>
+</ol>
+<h2 id="anchor_4"><a class="anchor-navigation-ex-anchor" href="#anchor_4" name="anchor_4"><i aria-hidden="true" class="fa fa-link"></i></a>3. 基本卫生保健的内容</h2>
+<ul>
+<li>
+<p>四个方面 ✳</p>
+<ol>
+<li>促进健康</li>
+<li>预防保健</li>
+<li>合理治疗</li>
+<li>社区康复</li>
+</ol>
+</li>
+<li>
+<p>八项内容</p>
+<ol>
+<li>对当前主要卫生问题及其预防和控制方法的健康教育。</li>
+<li>改善食品供应和合理营养。</li>
+<li>供应足够的安全卫生水和基本环境卫生设施。</li>
+<li>妇幼保健和计划生育。</li>
+<li>主要传染病的预防接种。</li>
+<li>预防和控制地方病。</li>
+<li>常见病和外伤的合理治疗。</li>
+<li>提供基本药物。</li>
+</ol>
+</li>
+</ul>
+<h2 id="anchor_5"><a class="anchor-navigation-ex-anchor" href="#anchor_5" name="anchor_5"><i aria-hidden="true" class="fa fa-link"></i></a>4. 基本卫生保健的特点 ✳</h2>
+<ol>
+<li>
+<p>社会性</p>
+<p>使所有人达到尽可能高的健康水平是世界范围内的一项重要的社会性目标。基本卫生保健具有广泛的社会性。</p>
+</li>
+<li>
+<p>群众性</p>
+<p>基本卫生保健的对象是居民群体。基本卫生保健具有广泛的群众性。群众不仅有享受卫生保健的权利，同时有参与和实施基本卫生保健的义务。</p>
+</li>
+<li>
+<p>艰巨性</p>
+<p>不论是从当今世界亟待解决的卫生问题来看，还是从我国卫生状况来分析，基本卫生保健的任务都是相当艰巨的。</p>
+</li>
+<li>
+<p>长期性</p>
+<p>人们对卫生保健的要求愈来愈高。我国人口的年龄结构转向“老年型”。人们生活方式改变所致慢性疾病、心脑血管疾病、恶性肿瘤以及意外伤害相对增加。</p>
+</li>
+</ol>
+<h2 id="anchor_6"><a class="anchor-navigation-ex-anchor" href="#anchor_6" name="anchor_6"><i aria-hidden="true" class="fa fa-link"></i></a>5. 基本卫生保健的意义</h2>
+<ol>
+<li>
+<p>充分享有健康权</p>
+<p>代表全世界人民的利益，体现了社会的公正和应享有的健康权利。</p>
+</li>
+<li>
+<p>促进社会经济发展</p>
+<p>基本卫生保健依赖于社会经济发展，又能开发人力资源，促进社会经济的发展。</p>
+</li>
+<li>
+<p>提高人人健康水平</p>
+<p>基本卫生保健立足基层、进入家庭，重视健康教育，从预防保健入手，达到人人健康的目标。</p>
+</li>
+<li>
+<p>提高精神文明水平</p>
+</li>
+</ol>
+
                         <footer class="page-footer"><span class="copyright">© 2020 刘士. 
 All rights reserved.</span><span class="footer-modification">
 <span id="busuanzi_container_site_uv" style="display:none">本站访客数 <span id="busuanzi_value_site_uv">
@@ -196,7 +277,7 @@ All rights reserved.</span><span class="footer-modification">
                 "next_page_link": "../02/index.html"
             },
             "basePath": "../../..",
-            "js": {}
+            "js": {'prism': ['../../../../asserts/lsbook/prismjs/clipboard.min.js', '../../../../asserts/lsbook/prismjs/prism.js']}
         });
     });
 </script>
